<resources>
    <string name="app_name">Natue Emoi</string>
    <string name="a_decouvrir">A Découvrir</string>

    <string name="bottom_home_item">Acceuil</string>
    <string name="bottom_collection_item">Collection</string>
    <string name="bottom_add_item">Ajouter</string>

    <!-- Page d'acceuil -->
    <string name="home_page_title">A Découvrir</string>
    <string name="home_page_last_plant_section">Dernières Plantes</string>

    <!-- ma page de collection  -->
    <string name="collection_page_title">Ma collection</string>

    <!--  page d'ajout d'une plant   -->
    <string name="add_plant_page_title">Ajout d\'une plante</string>
    <string name="add_plant_page_upload_button">Charger Image</string>
    <string name="add_plant_page_name_input">@string/item_plant_name</string>
    <string name="add_plant_page_description">@string/item_plant_Description</string>

    <string-array name="add_plant_page_grow_spinner_input">
        <item> Croissance : Lente</item>
        <item> Croissance : Moyenne</item>
        <item> Croissance : Rapide</item>
    </string-array>

    <string-array name="add_plant_page_water_spinner_input">
        <item> Consommation : Basse</item>
        <item> Consommation : Moyenne</item>
        <item> Consommation : Elevee</item>
    </string-array>

    <string name="add_plant_page_confirm_button">Confirmer</string>


    <!-- fenetre Popup de detail -->
    <string name="popup_plant_name">Plant Name</string>
    <string name="popup_plant_description_title">Description</string>
    <string name="popup_plant_description_subtitle">petite description</string>
    <string name="popup_plant_grow_title">Croissance</string>
    <string name="popup_plant_grow_subtitle">Lente</string>
    <string name="popup_plant_water_title">Consommation Eau</string>
    <string name="popup_plant_water_subtitle">Basse</string>

    <!-- Page customise -->
    <string name="item_plant_name">Nom de la Plante</string>
    <string name="item_plant_Description"> Description de la Plante</string>
</resources>