<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="360dp"
    android:layout_height="500dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <ImageView
                android:id="@+id/image_plant"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/trending1" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/popup_plant_name"
            style="@style/TitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/popup_plant_name" />

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.2"
            android:src="@drawable/ic_close" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/popup_plant_description_title"
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popup_plant_description_title" />

        <TextView
            android:id="@+id/popup_plant_description_subtitle"
            style="@style/DefaultTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popup_plant_description_subtitle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/popup_plant_grow_title"
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popup_plant_grow_title" />

        <TextView
            android:id="@+id/popup_plant_grow_subtitle"
            style="@style/DefaultTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popup_plant_grow_subtitle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/popup_plant_water_title"
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popup_plant_water_title" />

        <TextView
            android:id="@+id/popup_plant_water_subtitle"
            style="@style/DefaultTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popup_plant_water_subtitle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/delete_button"
            android:layout_width="40dp"
            android:layout_marginEnd="50dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_tash"/>

        <ImageView
            android:id="@+id/star_bottom"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:src="@drawable/ic_unlike"/>

    </LinearLayout>


</LinearLayout>